tests/ui/const-generics/gca/generic-param-rhs.stderr
error: generic parameters in const blocks are only allowed as the direct value of a `type const`
  --> $DIR/generic-param-rhs.rs:6:19
   |
LL |     foo::<const { N + 1 }>();
   |                   ^
   |
   = help: consider factoring the expression into a `type const` item and use it as the const argument instead

error: aborting due to 1 previous error

